--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Todo ist",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node backend/index.js",
+    "index": "nodemon backend/index.js"
   },
   "author": "Ali Imran",
   "license": "ISC",
